workloads/enterprise-app/overlays/stage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    konghq.com/plugins: auth-rule, default-rate-limit, request-tracker
spec:
  ingressClassName: kong
  rules:
  - host: api.demo.local
    http:
      paths:
      # STAGE PATHS
      - path: /stage/foo
        pathType: Prefix
        backend:
          service:
            name: foo-svc 
            port: {number: 80}
      - path: /stage/bar
        pathType: Prefix
        backend:
          service:
            name: bar-svc 
            port: {number: 80}
